<resources>
    <string name="app_name">University_project</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_mapview">mapview</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_NFC">NFC Reader/Writer</string>
    <string name="navigation_drawer_group">More Information</string>
    <string name="navigation_drawer_guide">User Guide</string>
    <string name="navigation_drawer_setting">Settings</string>
    <string name="navigation_drawer_aboutus">About Us</string>
    <string name="navigation_drawer_logoff">Log Off</string>

    <string name="action_settings">Settings</string>

    <string name="error">Error</string>
    <string name="no_nfc">No NFC found on this device</string>
    <string name="nfc_not_on">NFC is not enabled. Please go to the wireless settings to enable it.</string>
    <string name="nfc_clear">Clear All</string>
    <string name="no_connection">NFC is not active. Enable this to use this function.</string>
    <string name="no_connection_title">NFC Error</string>
    <string name="settings_button_text">Settings</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="nfc_scan">Please scan any NFC tags.</string>
    <string name="nfc_write">Write Here</string>
    <string name="nfc_write_button">Write</string>
    <string name="login_error">Login Failed - Username and/or password is wrong</string>
    <string name="Linear_textView">Example</string>
    <string name="button_close">Close</string>
</resources>
