<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_NFC"
            android:icon="@drawable/ic_nfc"
            android:title="@string/navigation_drawer_NFC" />
    </group>

    <item android:title="@string/navigation_drawer_group">
        <menu>
            <item
                android:id="@+id/nav_userguide"
                android:icon="@drawable/ic_userguide"
                android:title="@string/navigation_drawer_guide" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_setting"
                android:title="@string/navigation_drawer_setting" />
            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/ic_aboutus"
                android:title="@string/navigation_drawer_aboutus" />
            <item
                android:id="@+id/nav_logoff"
                android:icon="@drawable/ic_logoff"
                android:title="@string/navigation_drawer_logoff" />
        </menu>
    </item>
</menu>